# kvcache-analysis

./: .dockerignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
bench/: run_baseline.py  run_xinstance.py  test_harness.py  test_trace.py  test_xinstance.py  trace.py
docker/: Dockerfile  compose.mooncake.yml  compose.rdma.yml  run-bench.sh  run-server.sh
docs/: baseline.md  cross-node.md  environment-checklist.md  evaluation-rubric.md  followups.md  report.md  results-brief.md  runbook.md  stage3.md  status-summary.md  survey.md
scripts/: check_nvlink_p2p.py  gen_traces.sh  run_sweep.sh  serve_baseline.sh  serve_lmcache.sh  serve_master.sh  serve_mooncake.sh  stop_server.sh
