[project]
name = "kvcache-analysis"
version = "0.0.1"
description = "Evaluation and prototype of distributed KV caching for vLLM"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["bench", "prototype"]
python_files = ["test_*.py"]
addopts = "-q"
